@@ -1,5 +1,11 @@
 [b]Version 0.5.63 (not released yet)[/b]:
 
+(2007-12-27)
+ * Added a new option in Preferences->General->Video and audio: change volume
+   just before playing. This should fix the problem of the loud volume on
+   startup. It sets the volume using the commandline option -volume, but
+   WARNING: mplayer doesn't have such option, you need a patched mplayer!
+
 (2007-12-26)
  * New about dialog, with some tabs.
 
